# Microcontroller-Software

./: CMakeLists.txt  HD44780_LCD_PCF8574.cpp  HD44780_LCD_PCF8574.hpp  HD44780_LCD_PCF8574_Print.cpp  cgi.h  globaldata.h  htmldata.c  lwipopts.h  main.c  main.cpp  post.h  postrequest.h  send_request.h  ssi.h  temperature.h
html_files/: index.shtml  info.shtml  light.shtml  temperature.shtml
